fix: horizontal scroll

--- a/online-store/src/components/view/elements/header/style.scss
+++ b/online-store/src/components/view/elements/header/style.scss
@@ -1,6 +1,6 @@
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 60px;
     background-color: #303030;
     padding: 0 25px;
